# vision2020

./: README.md
hw01/: CMakeLists.txt  README.md  bof_db.xml  main.cpp  plot_bof.py
hw02/: CMakeLists.txt  README.md  generate_neg.cpp  generate_pos.cpp  svm_hog.cpp  svm_lbp.cpp  svm_lbp_hog.cpp
hw02/report/: references.bib  report.rmd
